docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/radiobutton.mdx
---
title: RadioButton
description: A Jetpack Compose RadioButton component for single-selection controls.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

A radio button component for selecting a single option from a set. Maps to the official Jetpack Compose [RadioButton](https://developer.android.com/develop/ui/compose/components/radio-button) API.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/radiobutton/android-light.webp"
  darkSrc="/static/images/expo-ui/radiobutton/android-dark.webp"
  alt="Selected and unselected Material 3 radio buttons"
/>

## Installation

<APIInstallSection />

## Usage

### Basic radio button

A standalone radio button with an `onClick` handler.

<ComponentExample
  title="BasicRadioButton.tsx"
  src="/static/images/expo-ui/examples/radiobutton-basic-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/radiobutton-basic-android-dark.webp"
  alt="A single radio button in its selected state">

```tsx
import { useState } from 'react';
import { Host, RadioButton } from '@expo/ui/jetpack-compose';

export default function BasicRadioButton() {
  const [selected, setSelected] = useState(false);

  return (
    <Host matchContents>
      <RadioButton
        selected={selected}
        onClick={() => setSelected(!selected)}
      />
    </Host>
  );
}
```

</ComponentExample>

### Radio group (recommended)

The recommended pattern for a radio group follows the [Compose accessibility guidelines](https://developer.android.com/develop/ui/compose/components/radio-button):

- Wrap the group in a `Column` with the `selectableGroup()` modifier so screen readers treat the options as a group.
- Apply the `selectable` modifier with `role: 'radioButton'` on each `Row`, making the entire row (including the label) tappable.
- Pass no `onClick` to the `RadioButton` itself, the row handles the interaction. This provides a larger touch target.

<ComponentExample
  title="RadioGroup.tsx"
  src="/static/images/expo-ui/examples/radiobutton-group-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/radiobutton-group-android-dark.webp"
  alt="Three radio rows labelled Calls, Missed, and Friends, with Calls selected">

```tsx
import { useState } from 'react';
import {
  Host,
  Column,
  Row,
  RadioButton,
  Text,
  useMaterialColors,
} from '@expo/ui/jetpack-compose';
import {
  selectable,
  selectableGroup,
  fillMaxWidth,
  height,
  padding,
} from '@expo/ui/jetpack-compose/modifiers';

export default function RadioGroup() {
  const colors = useMaterialColors();
  const [selectedOption, setSelectedOption] = useState('Calls');
  const options = ['Calls', 'Missed', 'Friends'];

  return (
    <Host matchContents>
      <Column modifiers={[selectableGroup()]}>
        {options.map(label => (
          <Row
            key={label}
            verticalAlignment="center"
            modifiers={[
              fillMaxWidth(),
              height(56),
              selectable(
                label === selectedOption,
                () => setSelectedOption(label),
                'radioButton'
              ),
              padding(16, 0, 16, 0),
            ]}>
            <RadioButton selected={label === selectedOption} />
            <Text
              color={colors.onBackground}
              modifiers={[padding(16, 0, 0, 0)]}>
              {label}
            </Text>
          </Row>
        ))}
      </Column>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { RadioButton } from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/radiobutton"
  apiName="RadioButton"
/>
